# havit-reproduction

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: run.py
experiments/models/: __init__.py  havit_learnable_alpha.py  havit_post_softmax.py  havit_zero_init.py
