[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "havit-reproduction"
version = "0.1.0"
description = "Reproduction of HAViT (arXiv:2603.18585) with architectural experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "einops>=0.7.0",
    "tensorboard>=2.13.0",
    "colorama>=0.4.6",
    "torchsummary>=1.5.1",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.hatch.build.targets.wheel]
packages = ["experiments"]